--- a/Sprint5/Task M5 T01.ipynb
+++ b/Sprint5/Task M5 T01.ipynb
@@ -524,8 +524,7 @@
     "if p_value < alpha:\n",
     "    print(\"Null hypothesis is rejected\")\n",
     "else:\n",
-    "    print(\"Null hypothesis is not rejected\")\n",
-    "\n"
+    "    print(\"Null hypothesis is not rejected\")"
    ]
   },
   {
