--- a/Sprint5/Task M5 T02.ipynb
+++ b/Sprint5/Task M5 T02.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 1,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -847,7 +847,7 @@
     "train = pd.concat([train, df_dummies_train], axis=1)\n",
     "train.drop(\"RAD\", axis=1, inplace=True)\n",
     "\n",
-    "print(train.head())\n"
+    "print(train.head())"
    ]
   },
   {
