--- a/Sprint6/Task M6 T01- Last.ipynb
+++ b/Sprint6/Task M6 T01- Last.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -53,14 +53,34 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX  \\\n",
+      "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1  296.0   \n",
+      "1  0.02731   0.0   7.07     0  0.469  6.421  78.9  4.9671    2  242.0   \n",
+      "2  0.02729   0.0   7.07     0  0.469  7.185  61.1  4.9671    2  242.0   \n",
+      "3  0.03237   0.0   2.18     0  0.458  6.998  45.8  6.0622    3  222.0   \n",
+      "4  0.06905   0.0   2.18     0  0.458  7.147  54.2  6.0622    3  222.0   \n",
+      "\n",
+      "   PTRATIO       B  LSTAT  MEDV  \n",
+      "0     15.3  396.90   4.98  24.0  \n",
+      "1     17.8  396.90   9.14  21.6  \n",
+      "2     17.8  392.83   4.03  34.7  \n",
+      "3     18.7  394.63   2.94  33.4  \n",
+      "4     18.7  396.90   5.33  36.2  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "col_names = ['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV']\n",
     "df_housing = pd.read_csv('housing data.csv', sep=',', names=col_names, header=None)\n",
     "\n",
-    "#print(df_housing.head())\n"
+    "print(df_housing.head())\n"
    ]
   },
   {
